run second iteration

--- a/explore/gpt_3_5.ipynb
+++ b/explore/gpt_3_5.ipynb
@@ -7,12 +7,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from gpt import GPT\n",
+    "import sys\n",
+    "sys.path.append('C:\\\\Users\\\\Owner\\\\OneDrive\\\\Desktop\\\\MSc. Bradford\\\\MSc. Dissertation\\\\llm_experiment\\\\src')\n",
+    "\n",
+    "import gpt\n",
     "\n",
     "MODEL = 'gpt-3.5-turbo-0613'\n",
-    "SECRET_KEY = os.getenv(\"GPT_SECRET_KEY\")\n",
+    "SECRET_KEY = os.getenv(\"OPENAI_SECRET_KEY\")\n",
     "TEMPERATURE = 0.5\n",
-    "gpt_3_5 = GPT(MODEL,TEMPERATURE, SECRET_KEY)"
+    "gpt_3_5 = gpt.GPT(MODEL,TEMPERATURE, SECRET_KEY)"
    ]
   },
   {
@@ -23,25 +26,25 @@
     {
      "data": {
       "text/markdown": [
-       "Data cleaning, also known as data cleansing or data scrubbing, is the process of identifying and correcting or removing errors, inconsistencies, and inaccuracies in a dataset. It involves transforming raw data into a clean and reliable format that is suitable for analysis.\n",
+       "Data cleaning, also known as data cleansing or data scrubbing, is the process of identifying and correcting or removing errors, inconsistencies, and inaccuracies in a dataset. It involves various techniques and methods to ensure that the data is accurate, complete, and reliable for analysis.\n",
        "\n",
-       "Data cleaning is an essential step in the data preprocessing pipeline, as raw data often contains various issues that can negatively impact the quality and reliability of analytical results. These issues can include missing values, duplicate records, incorrect data types, outliers, spelling mistakes, inconsistent formatting, and more.\n",
+       "Data cleaning typically includes tasks such as:\n",
        "\n",
-       "The data cleaning process typically involves several tasks, such as:\n",
+       "1. Removing duplicate records: Identifying and eliminating identical or near-identical observations in the dataset.\n",
        "\n",
-       "1. Handling missing data: This involves deciding how to deal with missing values, which can include imputation techniques, removing records with missing values, or creating a separate category for missing values.\n",
+       "2. Handling missing values: Dealing with missing data by either imputing values based on other observations or removing the records with missing values.\n",
        "\n",
-       "2. Removing duplicates: Identifying and removing duplicate records from the dataset to avoid redundancy and ensure data integrity.\n",
+       "3. Correcting inaccurate data: Identifying and rectifying errors, outliers, or inconsistencies in the data that may have occurred during data collection or entry.\n",
        "\n",
-       "3. Correcting inconsistent data: This includes addressing inconsistencies in data formatting, such as inconsistent date formats or inconsistent units of measurement.\n",
+       "4. Standardizing variables: Ensuring consistency in the format and units of measurement across different variables.\n",
        "\n",
-       "4. Standardizing data: Converting data into a consistent format or unit of measurement to ensure consistency and comparability.\n",
+       "5. Handling outliers: Identifying and addressing extreme values that may significantly affect the analysis or modeling results.\n",
        "\n",
-       "5. Handling outliers: Identifying and addressing outliers, which are extreme values that deviate significantly from the rest of the data. Outliers can be removed, transformed, or treated separately depending on the specific analysis.\n",
+       "6. Resolving inconsistencies: Checking for inconsistencies in the data, such as conflicting information or contradictory values, and resolving them.\n",
        "\n",
-       "6. Validating data integrity: Verifying the accuracy and integrity of data by performing various checks, such as cross-referencing with external sources or running logical checks on the data.\n",
+       "7. Removing irrelevant or redundant variables: Eliminating variables that are not necessary for the analysis or do not contribute meaningful information.\n",
        "\n",
-       "By performing these data cleaning tasks, analysts can ensure that their dataset is accurate, complete, and consistent, which improves the reliability and validity of any subsequent data analysis or modeling."
+       "Data cleaning is an essential step in the data preparation process as it helps improve the quality and reliability of the data, which in turn enhances the accuracy and validity of any subsequent analysis or modeling tasks."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -64,64 +67,64 @@
     {
      "data": {
       "text/markdown": [
-       "Certainly! Here are some examples of Python code snippets to perform the data cleaning tasks mentioned earlier:\n",
+       "Certainly! Here are some examples of Python code to perform common data cleaning tasks:\n",
        "\n",
-       "1. Handling missing data:\n",
+       "1. Removing duplicate records:\n",
+       "```python\n",
+       "# Assuming 'data' is a pandas DataFrame\n",
+       "data = data.drop_duplicates()\n",
+       "```\n",
        "\n",
-       "   - Removing records with missing values:\n",
-       "     ```python\n",
-       "     cleaned_data = original_data.dropna()\n",
-       "     ```\n",
+       "2. Handling missing values:\n",
+       "```python\n",
+       "# Assuming 'data' is a pandas DataFrame\n",
+       "# Drop rows with any missing values\n",
+       "data = data.dropna()\n",
        "\n",
-       "   - Imputing missing values using mean:\n",
-       "     ```python\n",
-       "     mean_value = original_data['column_name'].mean()\n",
-       "     cleaned_data = original_data.fillna(mean_value)\n",
-       "     ```\n",
+       "# Impute missing values with the mean of the column\n",
+       "data['column_name'].fillna(data['column_name'].mean(), inplace=True)\n",
+       "```\n",
        "\n",
-       "2. Removing duplicates:\n",
-       "   ```python\n",
-       "   cleaned_data = original_data.drop_duplicates()\n",
-       "   ```\n",
+       "3. Correcting inaccurate data:\n",
+       "```python\n",
+       "# Assuming 'data' is a pandas DataFrame\n",
+       "# Replace incorrect values with correct ones\n",
+       "data['column_name'].replace({'incorrect_value': 'correct_value'}, inplace=True)\n",
+       "```\n",
        "\n",
-       "3. Correcting inconsistent data:\n",
-       "   ```python\n",
-       "   cleaned_data['date_column'] = pd.to_datetime(cleaned_data['date_column'], format='%Y-%m-%d')\n",
-       "   ```\n",
+       "4. Standardizing variables:\n",
+       "```python\n",
+       "# Assuming 'data' is a pandas DataFrame\n",
+       "# Convert a variable to a specific data type\n",
+       "data['column_name'] = data['column_name'].astype('int')\n",
        "\n",
-       "4. Standardizing data:\n",
-       "   ```python\n",
-       "   cleaned_data['column_name'] = cleaned_data['column_name'].apply(lambda x: x.lower())\n",
-       "   ```\n",
+       "# Convert units of measurement\n",
+       "data['column_name'] = data['column_name'] * conversion_factor\n",
+       "```\n",
        "\n",
        "5. Handling outliers:\n",
-       "   - Removing outliers using z-score:\n",
-       "     ```python\n",
-       "     from scipy import stats\n",
-       "     z_scores = stats.zscore(original_data['column_name'])\n",
-       "     threshold = 3\n",
-       "     cleaned_data = original_data[(z_scores < threshold)]\n",
-       "     ```\n",
+       "```python\n",
+       "# Assuming 'data' is a pandas DataFrame\n",
+       "# Remove outliers using z-score method\n",
+       "from scipy import stats\n",
+       "data = data[(np.abs(stats.zscore(data['column_name'])) < 3)]\n",
+       "```\n",
        "\n",
-       "   - Transforming outliers using winsorization:\n",
-       "     ```python\n",
-       "     from scipy.stats.mstats import winsorize\n",
-       "     cleaned_data['column_name'] = winsorize(cleaned_data['column_name'], limits=[0.05, 0.05])\n",
-       "     ```\n",
+       "6. Resolving inconsistencies:\n",
+       "```python\n",
+       "# Assuming 'data' is a pandas DataFrame\n",
+       "# Identify and fix inconsistent values\n",
+       "data['column_name'].replace({'inconsistent_value': 'consistent_value'}, inplace=True)\n",
+       "```\n",
        "\n",
-       "6. Validating data integrity:\n",
-       "   - Cross-referencing with external source:\n",
-       "     ```python\n",
-       "     external_data = pd.read_csv('external_data.csv')\n",
-       "     merged_data = pd.merge(cleaned_data, external_data, on='common_column', how='inner')\n",
-       "     ```\n",
+       "7. Removing irrelevant or redundant variables:\n",
+       "```python\n",
+       "# Assuming 'data' is a pandas DataFrame\n",
+       "# Drop irrelevant or redundant columns\n",
+       "data = data.drop(['column_name1', 'column_name2'], axis=1)\n",
+       "```\n",
        "\n",
-       "   - Running logical checks on data:\n",
-       "     ```python\n",
-       "     cleaned_data = cleaned_data[(cleaned_data['column_name'] >= 0) & (cleaned_data['column_name'] <= 100)]\n",
-       "     ```\n",
-       "\n",
-       "Note: These code snippets are just examples, and you may need to adapt them based on your specific dataset and requirements. Additionally, you may need to import the necessary libraries, such as pandas and numpy, before running these code snippets."
+       "Please note that these are general examples, and the code may need to be modified based on the specific dataset and requirements. Also, make sure to import the necessary libraries (e.g., pandas, numpy, scipy) before executing the code."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -144,21 +147,19 @@
     {
      "data": {
       "text/markdown": [
-       "Determining which data cleaning tasks apply to your dataset depends on the specific characteristics and issues present in your data. Here are some steps you can follow to identify the tasks that may be relevant for your dataset:\n",
+       "To determine which data cleaning tasks apply to your dataset, you need to understand the characteristics and quality of your data. Here are some steps to help you identify the specific tasks required:\n",
        "\n",
-       "1. Explore the data: Start by getting familiar with your dataset. Look at the structure, format, and content of the data. Identify any potential issues or inconsistencies that you notice.\n",
+       "1. Data profiling: Perform an initial exploration of your dataset to gain insights into its structure, variables, and quality. This can involve examining summary statistics, checking for missing values, identifying unique values, and visualizing distributions or patterns.\n",
        "\n",
-       "2. Understand the data requirements: Consider the requirements of your analysis or the specific problem you are trying to solve. This will help you determine which data cleaning tasks are most relevant. For example, if you are performing time series analysis, correcting inconsistent date formats may be important. If you are building a predictive model, handling missing values and outliers might be crucial.\n",
+       "2. Data quality assessment: Evaluate the quality of your data by assessing its completeness, accuracy, consistency, and relevance. This can be done by checking for missing values, outliers, inconsistencies, and redundant or irrelevant variables.\n",
        "\n",
-       "3. Identify common data cleaning issues: Review common data cleaning issues and understand how they may apply to your dataset. Some common issues include missing values, duplicates, inconsistent formatting, outliers, and incorrect data types.\n",
+       "3. Domain knowledge: Consider your knowledge of the domain to identify potential data issues or errors that may commonly occur. For example, if you are working with customer data, you might expect missing values in certain fields like phone numbers or addresses.\n",
        "\n",
-       "4. Assess the quality of the data: Evaluate the quality and reliability of your dataset. Look for any indications of errors, inconsistencies, or inaccuracies. Consider factors such as data sources, data collection methods, and potential biases.\n",
+       "4. Data exploration: Conduct exploratory data analysis (EDA) to further understand your data and identify any anomalies or patterns that may require cleaning. Visualization techniques such as scatter plots, histograms, or box plots can help in identifying outliers or unusual data points.\n",
        "\n",
-       "5. Consult domain experts: If you have access to domain experts or subject matter experts in the specific field related to your dataset, consult with them. They can provide valuable insights into the data and help identify potential issues that may need to be addressed.\n",
+       "5. Data cleaning best practices: Familiarize yourself with common data cleaning tasks and techniques. This includes handling missing values, removing duplicates, correcting inaccurate data, standardizing variables, resolving inconsistencies, and removing irrelevant or redundant variables. Consider the applicability of these tasks to your dataset based on the issues identified in steps 1-4.\n",
        "\n",
-       "6. Perform exploratory data analysis: Conduct exploratory data analysis (EDA) to gain a deeper understanding of your dataset. Visualize the data, calculate summary statistics, and identify any patterns or anomalies. This process can help you uncover data quality issues that need to be cleaned.\n",
-       "\n",
-       "By following these steps, you can gain a better understanding of the specific data cleaning tasks that are relevant for your dataset. Remember that data cleaning is often an iterative process, and you may need to revisit and refine your cleaning tasks as you gain more insights into the data."
+       "By following these steps, you can gain a better understanding of your dataset's characteristics and identify the data cleaning tasks that are necessary to ensure its quality and reliability for analysis."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -181,37 +182,28 @@
     {
      "data": {
       "text/markdown": [
-       "Certainly! The code snippet provided under \"Handling Outliers\" demonstrates two common approaches to deal with outliers: removing outliers using z-score and transforming outliers using winsorization.\n",
+       "Certainly! The code provided for handling outliers using the z-score method is as follows:\n",
        "\n",
-       "1. Removing outliers using z-score:\n",
+       "```python\n",
+       "# Assuming 'data' is a pandas DataFrame\n",
+       "# Remove outliers using z-score method\n",
+       "from scipy import stats\n",
+       "data = data[(np.abs(stats.zscore(data['column_name'])) < 3)]\n",
+       "```\n",
        "\n",
-       "   ```python\n",
-       "   from scipy import stats\n",
-       "   z_scores = stats.zscore(original_data['column_name'])\n",
-       "   threshold = 3\n",
-       "   cleaned_data = original_data[(z_scores < threshold)]\n",
-       "   ```\n",
+       "Here's a breakdown of the code:\n",
        "\n",
-       "   - First, we import the `stats` module from the `scipy` library, which provides statistical functions and tools.\n",
-       "   - Next, we calculate the z-scores for the values in the specified column (`column_name`) of the original dataset. The z-score measures how many standard deviations a data point is away from the mean.\n",
-       "   - We set a threshold value (e.g., 3) to determine what is considered an outlier. In this example, any data point with a z-score greater than the threshold is considered an outlier.\n",
-       "   - Finally, we create a new dataset (`cleaned_data`) by selecting only the rows from the original dataset where the z-score is less than the threshold. This effectively removes the outliers from the dataset.\n",
+       "1. The code assumes that you have a pandas DataFrame named 'data' and you want to remove outliers from a specific column named 'column_name'. You can replace 'column_name' with the actual name of the column you want to clean.\n",
        "\n",
-       "2. Transforming outliers using winsorization:\n",
+       "2. The code imports the 'stats' module from the 'scipy' library. The 'stats' module provides various statistical functions and methods, including the z-score calculation.\n",
        "\n",
-       "   ```python\n",
-       "   from scipy.stats.mstats import winsorize\n",
-       "   cleaned_data['column_name'] = winsorize(cleaned_data['column_name'], limits=[0.05, 0.05])\n",
-       "   ```\n",
+       "3. The code applies the z-score calculation to the 'column_name' column using the 'stats.zscore()' function. The z-score measures how many standard deviations an observation is away from the mean. It helps identify observations that are significantly different from the rest of the data.\n",
        "\n",
-       "   - First, we import the `winsorize` function from the `scipy.stats.mstats` module, which provides a way to perform winsorization.\n",
-       "   - We apply the winsorize function to the values in the specified column (`column_name`) of the cleaned dataset (`cleaned_data`).\n",
-       "   - The `limits` parameter specifies the fraction of values to be trimmed from both the lower and upper ends of the distribution. In this example, 5% of the values from both ends of the distribution are replaced with the nearest non-outlier values.\n",
-       "   - The winsorized values are then assigned back to the same column in the cleaned dataset.\n",
+       "4. The code uses the 'np.abs()' function from the numpy library to calculate the absolute value of the z-scores. This ensures that we consider the magnitude of the deviation from the mean rather than the direction.\n",
        "\n",
-       "Both approaches provide different ways to handle outliers. Removing outliers entirely may be appropriate in some cases, while transforming them using winsorization can be useful when you want to retain the general shape of the distribution but reduce the impact of extreme values.\n",
+       "5. The code applies a condition to filter the DataFrame 'data' using boolean indexing. It keeps only the rows where the absolute z-score is less than 3. This threshold of 3 is a commonly used value to identify outliers. You can adjust this threshold based on your specific requirements.\n",
        "\n",
-       "It's important to note that the choice of approach depends on the specific characteristics of your dataset and the goals of your analysis. Additionally, you may need to adjust the threshold or limits values based on your data and requirements."
+       "By applying this code, rows with outliers in the specified column will be removed from the 'data' DataFrame, leaving behind a cleaned dataset without those extreme values."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
